--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,11 +1,12 @@
 #home{
     width: 100%;
+    /* height: 100vh; */
     display: flex;
     margin-top:80px;
 }
 .left-home{
     width:50%;
-    height:100vh;
+    height:35rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -57,7 +58,7 @@
 
 .right-home{
     width:50%;
-    height:100vh;
+    height:35rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -74,19 +75,23 @@
 ){
     #home{
         flex-direction: column-reverse;
-         text-align: center;
-       
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
      .right-home{
         width: 100%;
-        height: 50vh;
-        /* margin-top:80px; */
+        /* margin: 40px; */
     }
     .right-home img{
     width:60%;
+   margin-bottom: 20px;
+   padding-top: 4rem;
 }
     .left-home{
          width: 100%;
-        height: 50vh;
+          /* margin: 40px; */
+        /* height: 50vh; */
     }
 }
