--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -4,7 +4,6 @@
     text-align: center;
     letter-spacing: 2px;
     margin: 20px 0;
-    /* text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); */
     background-image: linear-gradient(to right, #ffcc00, #f90f0f);    
      background-clip: text;
     color:transparent;/* color: #fff; */
@@ -13,7 +12,9 @@
 }
 /* Global Styling */
 #contact {
+  margin-top: 20px;
   width: 100%;
+  /* min-height: 100vh; */
   display: flex;
   flex-wrap: wrap;
   color: aliceblue;
