--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -2,8 +2,8 @@
    min-width: 25rem;
   
   height: 150px;
-    background: linear-gradient(to right, #120f0e, #ffffff);
-    color:transparent;
+  background: linear-gradient(to right, #120f0e, #ffffff);
+  color:transparent;
   position: relative;
   border-radius: 10px;
   overflow: hidden;
@@ -33,7 +33,7 @@
   top: 100%; /* hidden below */
   left: 0;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
    background: linear-gradient(to right, #ffffff, #000000);
     color:transparent;
   display: flex;
