--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,11 +1,15 @@
 #about{
     width: 100%;
+    /* height: 100%; */
+    /* min-height: 100vh; */
     /* background-color: aqua; */
     display: flex;
+   
 }
 .left-about{
     width:50%;
-    height:100vh;
+    /* height:100vh; */
+     /* margin-top: 200px; */
     display: flex;
     /* align-items: center; */
     /* justify-content:space-between; */
@@ -72,7 +76,7 @@ color:white
 
 .right-about{
     width:50%;
-    height:100vh;
+    /* height:100vh; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -89,7 +93,8 @@ color:white
     }
     .left-about{
         width:100%;
-        margin: 10px;
+        margin: 40px 10px 20px 10px;
+
         /* height:100vh; */
     }
     .right-about{
