--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -1,5 +1,6 @@
 #projects{
     width: 100%;
+    /* height: 100%; */
     /* min-height: 100vh; */
     /* background-color: #f31c1c; */
     display: flex;
@@ -7,6 +8,7 @@
     align-items: center;
     justify-content: center;
     gap:30px;
+    margin-top: 6rem;
 }
 .projectsExperiment{
     /* color: white; */
