--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -81,17 +81,25 @@
         justify-content: center;
     }
      .right-home{
-        width: 100%;
-        /* margin: 40px; */
+    width: 100%;
+    height:35rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     }
     .right-home img{
     width:60%;
    margin-bottom: 20px;
    padding-top: 4rem;
 }
+    
+        
     .left-home{
-         width: 100%;
-          /* margin: 40px; */
-        /* height: 50vh; */
+     width: 100%;
+    height:rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color:aqua;
     }
 }
